syntax = "proto3";

option java_multiple_files = true;
option java_package = "cs416.lambda.capstone";

// TODO: Added for initial testing - remove
service Trade {
  // Sends a greeting
  rpc BuyStock (BuyRequest) returns (BuyReply);
  rpc SellStock (SellRequest) returns (SellReply);
}

message BuyRequest {
  string stock = 1;
  int32 amount = 2;
  int32 actBalance = 3;
}

message SellRequest {
  string stock = 1;
  int32 amount = 2;
}


message BuyReply {
  bool purchased = 1;
}

message SellReply {
  bool sold = 1;
  int32 sellAmount = 2;
}

